# pkgman

./: .gitignore  .ocamlformat  Cargo.toml  LICENSE-MIT  README.md  db.json  demo.ncl  dune-project  filename.json  pkgman.opam  rust-to-ocaml.md  types.ncl
common/: dune  fetcher.ml  interface.ml  printer.ml  utils.ml
dbgen/: db.ncl  schema.ncl
lib/: cli.ml  dune  fetcher.ml  github.ml  ops.ml  printer.ml  provider.ml  utils.ml
providers/: dune  fetcher.ml  github.ml  loading.ml  providers.ml  types.ml
providers/github/: dune  install.ml  list.ml  search.ml
src/: app.rs  main.rs  pkgman.rs  utils.rs
test/: dune
