(library
 (name pkgman)
 (libraries
  ; lwt
  ; cohttp
  ; cohttp-lwt-unix
  ; lwt_ssl
  directories
  printbox
  printbox-text
  str)
 (preprocess
  (pps ppx_deriving_yojson)))

; (rule
;  (target tmp)
;  (action
;   (system
;    "touch tmp; nickel -f ../../../dbgen/db.ncl export > ~/.config/pkgman/db.json")))
