(library
 (name providers)
 (libraries
  cohttp
  cohttp-lwt-unix
  lwt
  lwt_ssl
  terminal_size
  textwrap
  printbox
  printbox-text)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.show)))

; (rule
;  (target tmp)
;  (action
;   (system
;    "touch tmp; nickel -f ../../../dbgen/db.ncl export > ~/.config/pkgman/db.json")))
